--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ yarn-error.log
 *.jpg
 public/img/uploads/comprobante_2024-01-23_1012561413.jfif
 *.pdf
+package-lock.json
+package-lock.json
+package-lock.json
+composer.json
+composer.lock
