--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "require": {
         "php": "^7.3|^8.0",
         "barryvdh/laravel-dompdf": "^2.0",
+        "chillerlan/php-qrcode": "^5.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "imagine/imagine": "^1.3",
-        "intervention/image": "^3.1",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.5",
@@ -18,8 +18,7 @@
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
         "mercadopago/dx-php": "^2.5",
-        "rap2hpoutre/laravel-log-viewer": "^2.3",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "rap2hpoutre/laravel-log-viewer": "^2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
